Implementación del API estructura

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DB_HOST=localhost
-DB_USER=root
+DB_PORT=3306
+DB_USERNAME=root
 DB_PASSWORD=
-DB_NAME=cubo_development
+DB_DATABASE=cubo_development
